# PaintApp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Canvas.cpp  Canvas.h  PointF.h  QtPaintApp.cpp  README.md  main.cpp  paint_app.cpp  paint_app.h  paint_surface.cpp  paint_surface.h
commands/: CommandManager.cpp  CommandManager.h  DrawCommand.cpp  DrawCommand.h  MoveCommand.h  ResizeCommand.cpp
painter/: Painter.cpp  Painter.h  PainterImpl.h  QtPainterImpl.cpp  QtPainterImpl.h
shapes/: Ellipse.cpp  Ellipse.h  Manipulator.cpp  Manipulator.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  ShapeGroup.cpp  ShapeGroup.h  Triangle.cpp  Triangle.h
shapes/factory/: PrototypeShapeFactory.h  ShapeFactory.h
src/: Color.h  PointF.h  QtPaintApp.cpp  QtPaintApp.h
src/commands/: Command.h  DrawCommand.cpp  DrawCommand.h  MoveCommand.cpp  ResizeCommand.h
src/painter/: Painter.h
src/shapes/: Ellipse.cpp  Manipulator.cpp  Rectangle.cpp  Shape.cpp  ShapeGroup.cpp  Triangle.cpp
src/shapes/factory/: Factory.h
src/tools/: ManipulatorTool.h  Tool.h
tools/: DrawTool.cpp  DrawTool.h  ManipulatorTool.cpp  ManipulatorTool.h  Tool.h
